influxdb_influxql_parser/src/snapshots/influxdb_influxql_parser__visit__test__show_retention_policies_statement.snap
---
source: influxdb_influxql_parser/src/visit.rs
expression: "visit_statement!(\"SHOW RETENTION POLICIES\")"
---
- "pre_visit_statement: ShowRetentionPolicies(ShowRetentionPoliciesStatement { database: None })"
- "pre_visit_show_retention_policies_statement: ShowRetentionPoliciesStatement { database: None }"
- "post_visit_show_retention_policies_statement: ShowRetentionPoliciesStatement { database: None }"
- "post_visit_statement: ShowRetentionPolicies(ShowRetentionPoliciesStatement { database: None })"

